Update package version to 1.2.0, add Jest for testing, and modify test scripts in package.json. Enhance package-lock.json with new dependencies and their configurations.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "keywords": [
     "bible",
@@ -28,6 +29,9 @@
   },
   "homepage": "https://github.com/mianala/bibles#readme",
   "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.0",
     "typescript": "^5.0.0"
   },
   "files": [
@@ -36,4 +40,4 @@
     "LICENSE",
     "CHANGELOG.md"
   ]
-} 
+}
